Changelog
=========

1.1.3 (unreleased)
------------------

- Fixed tests.


1.1.2 (2013-09-26)
------------------

- Fix packaging.


1.1 (2013-09-26)
----------------

- Added a timeout on api url requests
  so that task is not blocked when we have a network issue.
  [thomasdesvenain]

- Reindex when we save the pad.
  [thomasdesvenain]

- Default pad text is collaboration field text, not description field.
  [thomasdesvenain]

- Refactor API callable to catch exceptions [toutpt]

- Add dexterity support. The field choice is achieved by looking for an
  IRichText field in the schema. [toutpt]

- Set logs to DEBUG.
  [thomasdesvenain]

- i18n fixes.
  [thomasdesvenain]

- fix cookie path when behind a proxy (virtualhostmonster)
  [kiorky]

1.0 (2013-02-14)
----------------

- Initial release